--- a/info.html
+++ b/info.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Info.html</title>
-    <link rel="stylesheet" href="style.css>
+    <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <center>
@@ -12,6 +12,8 @@
       <p>Year: 2021</p>
       <p>Python Version: 3.6+</p>
       <p>Licence: MIT Licence</p>
+      <p>Copyright: Allowed if credit is gived</p>
+      <img src="https://upload.wikimedia.org/wikipedia/commons/c/c3/Python-logo-notext.svg"> 
     </center>
   </body>
 </html>
